# InTune

./: README.md  conf.json  main.ipynb
intune-client/: README.md  package-lock.json  package.json
intune-client/src/: App.js  InTune.js
intune-client/src/ItGen/: ItGen.js  JobsView.js  MetaForm.js  TrackSelector.js
intune-client/src/ItHome/: ItHome.js
intune-client/src/ItRec/: ItRec.js  song-recommender__2_.ipynb
intune-client/src/api/: auth.js  constants.js  httpClient.js  spotify.js
intune-client/src/common/: SearchableSelect.js
intune-client/src/contexts/: UserContext.js
intune-server/: README.rst  pyproject.toml
intune-server/intune_server/: app.py  main.py
intune-server/intune_server/models/: __init__.py  generation.py
intune-server/intune_server/routes/: __init__.py  authorization.py  generation.py  recommendation.py  spotify.py
intune-server/intune_server/services/: authorization.py  downloader.py  generation.py  recommendation.py  spotify.py
intune-server/intune_server/spotify_data/GeorgeListeningHistory/: StreamingHistory0.json  StreamingHistory1.json  StreamingHistory2.json  StreamingHistory3.json  StreamingHistory4.json  StreamingHistory5.json
intune-server/intune_server/spotify_data/GrantListeningHistory/: StreamingHistory0.json  StreamingHistory1.json
intune-server/intune_server/spotify_data/JacobListeningHistory/: StreamingHistory0.json
intune-server/intune_server/spotify_data/RodrigoListeningHistory/: StreamingHistory0.json  StreamingHistory1.json
